[project]
name = "pdm-example"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ftnext", email = "takuyafjp+develop@gmail.com"},
]
dependencies = [
    "kojo-fan-art>=0.1.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
