[project]
name = "rye-example"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ftnext", email = "takuyafjp+develop@gmail.com" }
]
dependencies = [
    "kojo-fan-art>=0.1.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye_example"]
